--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.5.1"
-	}
+	},
+	"packageManager": "pnpm@10.22.0"
 }
